# tg_cal_reminder

./: .env.example  AGENTS.md  LICENSE  Procfile  README.md  alembic.ini  docker-compose.test.yml  program_description_text.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
design/: file_creation_sequence.md  file_structure.md  list_tg_commands.md  program_description_text.md  prompt_code_one_file.md  running integration tests.md  running llm tests.md  specification.md  suggested_task.md
integration_tests/: test_bot_integration.py
llm_tests/: test_translator_live.py
migrations/: env.py
migrations/versions/: 5b221ee93923_add_is_authorized.py  bb2580a630d8_initial.py  ce35bd2d9d39_add_timezone.py
tests/: test_crud.py  test_handlers.py  test_main.py  test_messages.py  test_migrations_env.py  test_models.py  test_parser.py  test_polling.py  test_scheduler.py  test_sessions.py  test_timezones.py  test_translator.py  test_update.py
tg_cal_reminder/: main.py
tg_cal_reminder/bot/: commands.py  handlers.py  polling.py  scheduler.py  update.py
tg_cal_reminder/db/: crud.py  models.py  sessions.py
tg_cal_reminder/i18n/: messages.py
tg_cal_reminder/llm/: model.py  translator.py
tg_cal_reminder/utils/: parser.py  timezones.py
